tg-1075 [FE] Pantalla para generar pase de cama

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -30,6 +30,15 @@
 							</button>
 						</ng-container>
 					</ng-container>
+
+					<ng-container
+						*hasRole="['ADMINISTRATIVO']">
+						<button id="btnPaseCama" name="btnPaseCama" mat-flat-button color="primary" fxFlexFill.xs (click)="goToPaseCama()">
+							<span class="uppercase"
+								[translate]="'internaciones.internacion-paciente.actions.RELOCATE_PATIENT_BED'"></span>
+						</button>
+					</ng-container>
+
 				</ng-container>
 
 				<ng-container *featureFlag="'epicrisisRequired'">
