--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.scss
@@ -9,3 +9,14 @@ mat-form-field {
 .margin-checkbox {
 	margin-bottom: 15px;
 }
+
+.signos-vitales-field {
+	.mat-form-field {
+		width: 95%;
+		::ng-deep .mat-form-field-wrapper {
+			padding-bottom: 0;
+		}
+		margin-bottom: -5px;
+	}
+	margin-bottom: 10px;
+}
