--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -3,7 +3,7 @@
 		<div id="title">
 			<h2 [translate]="'ambulatoria.paciente.vacunas.TITLE'"></h2>
 		</div>
-		<div id="add_button">
+		<div id="add_button" *hasRole="['ENFERMERO']">
 			<button mat-flat-button color="primary" (click)=goToAplicarVacuna()>
 				<span>{{'ambulatoria.paciente.vacunas.ADD' | translate | uppercase }}</span>
 			</button>
