tg-1193 conexion con endpoint profesionales de salud

--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -73,8 +73,8 @@
 						            (selectionChange)="enableAgendaDetails()">
 							<mat-option *ngFor="let professional of professionals"
 							            [value]="professional.id">
-								{{professional.person.firstName}} {{professional.person.lastName}}
-								{{professional.licenceNumber}}
+								{{professional.firstName}} {{professional.lastName}}
+								{{" - Nro. mat: "}} {{professional.licenceNumber}}
 							</mat-option>
 						</mat-select>
 						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
