--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -93,7 +93,7 @@
 	</section>
 
 	<section id="datos-antropometricos" class="doc-section">
-		<app-document-section [sectionTitle]="'internaciones.anamnesis.datos-antropometricos.TITLE'">
+		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.TITLE'">
 			<ng-container concept-form>
 				<form [formGroup]="datosAntropometricosNuevaConsultaService.getForm()">
 					<div>
@@ -109,19 +109,55 @@
 					</div>
 					<div>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
+							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.HEIGHT'"></mat-label>
 							<input id="height" name="height" formControlName="height" placeholder="Ej: 180"
 								   type="number" matInput>
 						</mat-form-field>
 					</div>
 					<div>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
+							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.WEIGHT'"></mat-label>
 							<input id="weight" name="weight" formControlName="weight" placeholder="Ej: 70" type="number"
 								   matInput>
 						</mat-form-field>
 					</div>
 				</form>
+			</ng-container>
+		</app-document-section>
+	</section>
+
+	<section id="antecedentes-familiares" class="doc-section">
+		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.TITLE'"
+			[tableTitle]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.table.TITLE'"
+			[columns]="antecedentesFamiliaresNuevaConsultaService.getColumns()"
+			[data]="antecedentesFamiliaresNuevaConsultaService.getData()">
+			<ng-container concept-form>
+				<app-concepts-search
+					*ngIf="!antecedentesFamiliaresNuevaConsultaService.getSnomedConcept() else procedimientoForm"
+					[label]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.ANTECEDENTES_FAMILIARES'"
+					(search)="antecedentesFamiliaresNuevaConsultaService.openSearchDialog($event)">
+				</app-concepts-search>
+				<ng-template #procedimientoForm>
+					<form [formGroup]="antecedentesFamiliaresNuevaConsultaService.getForm()"
+						(ngSubmit)="antecedentesFamiliaresNuevaConsultaService.addToList()">
+						<mat-form-field appearance="outline">
+							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.ANTECEDENTES_FAMILIARES'">
+							</mat-label>
+							<input id="antecedentes-familiares-input" matInput type="text" formControlName="snomed" name="snomed"
+								readonly matTooltip="{{antecedentesFamiliaresNuevaConsultaService.getSnomedConcept().pt }}">
+							<button id="clear-antecedente" mat-button matSuffix color="warn" mat-icon-button
+								(click)="antecedentesFamiliaresNuevaConsultaService.resetForm()">
+								<mat-icon>close</mat-icon>
+							</button>
+						</mat-form-field>
+						<div align="end">
+							<button id="submit_antecedentes_familiares" class="uppercase" mat-raised-button color="primary"
+								type="submit">
+								<span class="uppercase" [translate]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.buttons.ADD'"></span>
+							</button>
+						</div>
+					</form>
+				</ng-template>
 			</ng-container>
 		</app-document-section>
 	</section>
