--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -34,7 +34,7 @@
 	<section id="problemas" class="doc-section">
 		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TITLE'"
 			[tableTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TABLE_TITLE'"
-			[columns]="problemasNuevaConsultaService.getColumns()" [data]="problemasNuevaConsultaService.getData()">
+			[columns]="problemasNuevaConsultaService.getColumns()" [data]="problemasNuevaConsultaService.getProblemas()">
 			<div concept-form>
 				<app-concepts-search *ngIf="!problemasNuevaConsultaService.getSnomedConcept() else problemaForm"
 					[label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
@@ -167,7 +167,7 @@
 			[sectionTitle]="'ambulatoria.paciente.nueva-consulta.medicaciones.TITLE'"
 			[tableTitle]="'ambulatoria.paciente.nueva-consulta.medicaciones.TABLE_TITLE'"
 			[columns]="medicacionesNuevaConsultaService.getColumns()"
-			[data]="medicacionesNuevaConsultaService.getData()">
+			[data]="medicacionesNuevaConsultaService.getMedicaciones()">
 				<div concept-form>
 					<app-concepts-search
 						*ngIf="!medicacionesNuevaConsultaService.getSnomedConcept() else medicacionForm"
@@ -217,7 +217,7 @@
 		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.procedimientos.TITLE'"
 			[tableTitle]="'ambulatoria.paciente.nueva-consulta.procedimientos.TABLE_TITLE'"
 			[columns]="procedimientoNuevaConsultaService.getColumns()"
-			[data]="procedimientoNuevaConsultaService.getData()">
+			[data]="procedimientoNuevaConsultaService.getProcedimientos()">
 			<ng-container concept-form>
 				<app-concepts-search
 					*ngIf="!procedimientoNuevaConsultaService.getSnomedConcept() else procedimientoForm"
@@ -371,6 +371,28 @@
 				</form>
 			</ng-container>
 		</app-document-section>
+	</section>
+
+	<section id="evolucion" class="doc-section">
+		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.evolucion.TITLE'">
+			<ng-container concept-form>
+				<form [formGroup]="formEvolucion">
+					<mat-form-field appearance="outline">
+						<textarea matInput type="text" id="evolucion-input" name="evolucion" formControlName="evolucion"
+								  placeholder="{{'ambulatoria.paciente.nueva-consulta.evolucion.DESCRIPCION' | translate }}">
+						</textarea>
+					</mat-form-field>
+				</form>
+			</ng-container>
+		</app-document-section>
+	</section>
+
+	<section class="doc-section">
+		<div align="end">
+			<button class="uppercase" mat-raised-button color="primary" (click)="save()">
+				<span [translate]="'buttons.CONFIRM'"></span>
+			</button>
+		</div>
 	</section>
 
 </app-content>
