tg-1208 fix error 500 al confirmar consulta sin motivo

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -434,7 +434,13 @@
 		</app-document-section>
 	</section>
 
-	<section class="doc-section">
+	<section id="validations" class="doc-section" *ngIf="this.error">
+		<mat-card>
+			<mat-error class="mat-body-2">{{ error | translate }}</mat-error>
+		</mat-card>
+	</section>
+
+	<section id="buttons" class="doc-section">
 		<div align="end">
 			<button class="uppercase" mat-raised-button color="primary" (click)="save()">
 				<span [translate]="'buttons.CONFIRM'"></span>
