--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -67,18 +67,30 @@
 						<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO'">
 						</mat-label>
 						<input matInput id="fecha_inicio" [matDatepicker]="inicioDatePicker"
-							formControlName="fechaInicio" [max]="problemasNuevaConsultaService.getFechaInicioMax()">
+							formControlName="fechaInicio" [max]="problemasNuevaConsultaService.getFechaInicioMax()"
+							   (dateChange)="problemasNuevaConsultaService.checkValidFechaFin()">
 						<mat-datepicker-toggle matSuffix [for]="inicioDatePicker"></mat-datepicker-toggle>
 						<mat-datepicker #inicioDatePicker></mat-datepicker>
+						<mat-error
+							*ngIf="problemasNuevaConsultaService.hasError('required', 'fechaInicio')"
+							[translate]="'forms.REQUIRED'">
+						</mat-error>
+						<mat-error
+							*ngIf="problemasNuevaConsultaService.hasError('matDatepickerMax', 'fechaInicio')"
+							[translate]="'forms.MAX_DATE_TODAY'">
+						</mat-error>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline">
 						<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_FIN'">
 						</mat-label>
 						<input matInput id="fecha_fin" [matDatepicker]="finDatePicker" formControlName="fechaFin"
-							[min]="problemasNuevaConsultaService.getFechaFinMin()">
+							   (dateChange)="problemasNuevaConsultaService.checkValidFechaFin()">
 						<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
 						<mat-datepicker #finDatePicker></mat-datepicker>
+						<mat-error *ngIf="problemasNuevaConsultaService.hasError('min', 'fechaFin')"
+								   [translate]="'ambulatoria.paciente.nueva-consulta.problemas.errors.FECHA_FIN_MIN'">
+						</mat-error>
 					</mat-form-field>
 
 					<div align="end">
