--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -56,13 +56,10 @@
 				</div>
 				<div fxLayout="row">
 					<mat-form-field appearance="outline">
-						<mat-select id="professionalId"
-						            name="professionalId"
-						            formControlName="professionalId"
-						            placeholder="{{'pacientes.form.SELECT' | translate}}"
-						            (selectionChange)="enableAgendaDetails()">
-							<mat-option *ngFor="let professional of professionals"
-							            [value]="professional.id">
+						<mat-select id="professionalId" name="professionalId" formControlName="professionalId"
+							placeholder="{{'pacientes.form.SELECT' | translate}}"
+							(selectionChange)="enableAgendaDetails()">
+							<mat-option *ngFor="let professional of professionals" [value]="professional.id">
 								{{professional.firstName}} {{professional.lastName}}
 								{{" - Nro. mat: "}} {{professional.licenceNumber}}
 							</mat-option>
@@ -150,7 +147,8 @@
 					let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
 					<div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
 						[class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
-						[ngClass]="segment.cssClass" (mousedown)="newAgendaService.startDragToCreate(segment, segmentElement)">
+						[ngClass]="segment.cssClass"
+						(mousedown)="newAgendaService.startDragToCreate(segment, segmentElement)">
 						<div class="cal-time" *ngIf="isTimeLabel">
 							{{ segment.date | calendarDate:'weekViewHour':locale }}
 						</div>
