--- a/front-end/webapp/src/app/modules/historia-clinica/components/concepts-search/concepts-search.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/concepts-search/concepts-search.component.html
@@ -1,11 +1,14 @@
-<mat-form-field>
-	<mat-label [translate]="'internaciones.anamnesis.SEARCH'" [translateParams]="{ conceptLabel: translatedLabel }"></mat-label>
-	<input matInput type="text" [(ngModel)]="searchValue">
-	<button id="clear" type="button" mat-button *ngIf="searchValue" matSuffix color="warn" mat-icon-button
-		(click)="clear()">
-		<mat-icon>close</mat-icon>
-	</button>
-	<button mat-flat-button type="button" color="primary" matSuffix (click)="emitSearch()">
-		<span class="uppercase" [translate]="'buttons.SEARCH'"></span>
-	</button>
-</mat-form-field>
+<form [formGroup]="form" (ngSubmit)="emitSearch()">
+	<mat-form-field>
+		<mat-label [translate]="'internaciones.anamnesis.SEARCH'" [translateParams]="{ conceptLabel: translatedLabel }"></mat-label>
+		<input id="input" name="input" matInput type="text" formControlName="searchValue">
+		<mat-error *ngIf="hasError(form, 'minlength', 'searchValue')" [translate]="'forms.MIN_LENGTH_ERROR'" [translateParams]="{ minLength: MIN_LENGTH }"></mat-error>
+		<button id="clear" type="button" mat-button *ngIf="form.controls.searchValue" matSuffix color="warn" mat-icon-button
+			(click)="clear()">
+			<mat-icon>close</mat-icon>
+		</button>
+		<button mat-flat-button type="submit" color="primary" matSuffix>
+			<span class="uppercase" [translate]="'buttons.SEARCH'"></span>
+		</button>
+	</mat-form-field>
+</form>
