tg-1186 Mocks para turno

--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
@@ -6,6 +6,10 @@
 				<button mat-flat-button color="primary" id="goToNewAgendaButton" (click)="goToNewAgenda()" fxFlexFill.xs>
 					<span class="uppercase" [translate]="'turnos.home.buttons.NEW_AGENDA'"></span>
 				</button>
+
+				<button mat-flat-button color="primary" routerLink="./solicitar" fxFlexFill.xs>
+					<span class="uppercase">Solicitar</span>
+				</button>
 			</ng-container>
 		</div>
 	</section>
