--- a/sgh-ansible/roles/load_balancer_web/templates/nginx.conf.j2
+++ b/sgh-ansible/roles/load_balancer_web/templates/nginx.conf.j2
@@ -22,7 +22,7 @@ server {
     include /etc/nginx/default.d/*.conf;
     
     location ~/api(.*)$ {
-            proxy_pass              http://back-servers$1;
+            proxy_pass              http://back-servers/api$1;
             proxy_set_header        Host            $host;
             proxy_set_header        X-Real-IP       $remote_addr;
             proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
