--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -3,13 +3,15 @@
 </section>
 <section id="problemas" fxLayout="row">
 	<app-summary-card [header]="cronicos"
-	                  [editable]="false">
-
+					  [editable]="false">
+					  <app-no-data></app-no-data>
 	</app-summary-card>
 	<app-summary-card [header]="activos"
-	                  [editable]="false">
+					  [editable]="false">
+					  <app-no-data></app-no-data>
 	</app-summary-card>
 	<app-summary-card [header]="resueltos"
-	                  [editable]="false">
+					  [editable]="false">
+					  <app-no-data></app-no-data>
 	</app-summary-card>
 </section>
