tg-1222 [FE] Agregar informacion de rango horario seleccionado al dialogo

--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
 	<div class="mat-h2" translate="turnos.new-agenda.dialog.TITLE"></div>
 </div>
-
+<div>{{data.start | dayTimeRange: data.end }}</div>
 
 <form [formGroup]="form" (ngSubmit)="submit()">
 	<div fxLayout="column">
