--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -155,8 +155,19 @@
 					</div>
 				</ng-template>
 
+				<ng-template #headerTemplate let-days="days" let-locale="locale">
+					<div class="cal-day-headers">
+						<div class="cal-header" *ngFor="let day of days">
+							<strong>
+								{{ day.date | calendarDate:'weekViewColumnHeader':locale | titlecase}}
+							</strong>
+						</div>
+					</div>
+				</ng-template>
+
 				<mwl-calendar-week-view [viewDate]="viewDate" [events]="newAgendaService.events"
-					[hourSegmentTemplate]="weekViewHourSegmentTemplate" [dayStartHour]="openingTime" [dayEndHour]="closingTime"
+					[hourSegmentTemplate]="weekViewHourSegmentTemplate" [headerTemplate]="headerTemplate"
+					[dayStartHour]="openingTime" [dayEndHour]="closingTime"
 					[hourSegments]="MINUTES_IN_HOUR / form.value.appointmentDurationId" [weekStartsOn]="weekStartsOn">
 				</mwl-calendar-week-view>
 
