--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -2,11 +2,18 @@
 	<h2 class="page-title" [translate]="'ambulatoria.paciente.problemas.TITLE'"></h2>
 </section>
 <section id="problemas" fxLayout="row">
-	<app-summary-card [header]="cronicos"
-					  [editable]="false">
-					  <app-no-data></app-no-data>
-	</app-summary-card>
 	<app-summary-card [header]="activos"
+					  [editable]="false">
+					  <mat-list id="lista-problemas-activos" *ngIf="activeProblems?.length > 0 else noInfo">
+						<mat-list-item *ngFor="let problem of activeProblems">
+							{{ problem.snomed.pt}} - {{problem.startDate }}
+						</mat-list-item>
+					  </mat-list>
+					  <ng-template #noInfo>
+						<app-no-data></app-no-data>
+					  </ng-template>
+	</app-summary-card>
+	<app-summary-card [header]="cronicos"
 					  [editable]="false">
 					  <app-no-data></app-no-data>
 	</app-summary-card>
